# vuln-reach

./: CODE_OF_CONDUCT.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: test.yml
bench/: Cargo.toml  packages
bench/src/: main.rs
vuln-reach/: Cargo.toml  build.rs
vuln-reach-cli/: Cargo.toml  README.md  sample.toml
vuln-reach-cli/src/: main.rs
vuln-reach-cli/tests/fixtures/: jest-environment-jsdom-28.1.3.toml
vuln-reach/src/: lib.rs  test_util.rs  util.rs
vuln-reach/src/javascript/: common.rs  mod.rs
vuln-reach/src/javascript/lang/: accesses.rs  exports.rs  imports.rs  mod.rs  symbol_table.rs
vuln-reach/src/javascript/module/: mod.rs  module_cache.rs
vuln-reach/src/javascript/module/resolver/: fs.rs  mem.rs  mod.rs  tgz.rs
vuln-reach/src/javascript/package/: mod.rs  reachability.rs  resolver.rs
vuln-reach/src/javascript/project/: mod.rs
vuln-reach/src/javascript/queries/: commonjs-exports.lsp  commonjs-imports.lsp  esm-exports.lsp  esm-imports.lsp
vulnreach_types/: Cargo.toml
vulnreach_types/src/: lib.rs
