[package]
name = "vuln-reach-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["derive"] }
futures = "0.3.28"
vuln-reach = { version = "0.1.0", path = "../vuln-reach" }
reqwest = { version = "0.11.16", features = ["rustls-tls", "json"] }
serde = { version = "1.0.159", features = ["derive"] }
tokio = { version = "1.27.0", features = ["macros", "net", "fs", "rt-multi-thread"] }
toml = "0.7.3"
