[package]
name = "vuln-reach"
version = "0.1.0"
edition = "2021"
description = "A library for building tools to determine if vulnerabilities are reachable in a code base."
authors = ["Phylum, Inc. <engineering@phylum.io>"]
repository = "https://github.com/phylum-dev/vuln-reach"
documentation = "https://docs.rs/vuln-reach"
license-file = "../LICENSE"

[dependencies]
flate2 = "1.0.24"
itertools = "0.10.5"
lazy_static = "1.4.0"
ouroboros = "0.17.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tar = "0.4.38"
thiserror = "1.0.37"
tree-sitter = "0.20.9"
walkdir = "2.3.2"

[build-dependencies]
cc = "1.0.76"

[dev-dependencies]
maplit = "1.0.2"
tempfile = "3.3.0"
textwrap = "0.16.0"
